--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,6 +14,9 @@
     <link href="assets/img/favicon.png" rel="icon">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     
+    <!-- font Awesome -->
+    <script src="https://kit.fontawesome.com/4bde94238d.js" crossorigin="anonymous"></script>
+
   </head>
   <body>
     <div id="root"></div>
