--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,10 @@
     <!-- bootswatch CSS -->
     <link rel="stylesheet" href="https://bootswatch.com/5/cosmo/bootstrap.min.css">
 
+    <!-- bootswatch Icons --->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" rel="stylesheet">
+
+
     <!-- Favicons -->
     <link href="assets/img/favicon.png" rel="icon">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
